# cs267-final-proj

./: .gitignore  CMakeLists.txt  common.h  compression.hpp  job-sparse  main.cpp  merging.hpp  mpi.cpp  network-traffic.cpp  network-traffic.hpp  plot_compression.py  plot_sparse.py  plot_sparse_length.py  run_sparse.sh  sparse compressed distributions.csv  sparse-compressed-distributions.csv  sparse-length.csv  sparse.csv  vector-gen.cpp  vector-gen.hpp
report-viz/: extract_sim_times.py  plot_particle_scaling.py  plot_strong_scaling.py
report-viz/data/: hw2-2perf.csv  hw2-2strong.csv  hw2-2weak.csv
